# exercicioEBAC_djangoPoetry

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini
.github/workflows/: bookstore.yml
bookstore/: create_fake_data.py  settings.py  urls.py
bookstore/api/: _tests.py  apps.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
bookstore/api/migrations/: 0001_initial.py  0002_remove_book_author_delete_author_delete_book.py
bookstore/api/viewsets/: author_viewset.py  book_viewset.py
bookstore/bookstore/: manage.py  settings.py  urls.py  wsgi.py
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
order/: factories.py  models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py
product/: factories.py  models.py  serializers.py  urls.py
product/migrations/: 0001_initial.py
product/viewsets/: __init__.py  author_viewset.py  book_viewset.py
